Bug 168892 - FILESAVE XLSX Cell height not adjusted upon text wrapping
Summary: FILESAVE XLSX Cell height not adjusted upon text wrapping
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:26.2.0 target:25.8.4
Keywords: bibisected, bisected, filter:xlsx, regression
Depends on:
Blocks: XLSX
  Show dependency treegraph
 
Reported: 2025-10-16 11:22 UTC by Roman
Modified: 2025-11-28 18:14 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Без_имени_1.xlsx (5.57 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2025-10-16 11:24 UTC, Roman
Details
Screenshot.png (76.03 KB, image/png)
2025-11-14 06:36 UTC, Roman
Details
2.mp4 (5.58 MB, video/mp4)
2025-11-19 11:19 UTC, Roman
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman 2025-10-16 11:22:55 UTC
Description:
EN: 25.8.2.2 when opening an xlsx document and entering text into a cell larger than its size, the cell does not expand
RU: 25.8.2.2 при открытии документа xlsx и вводе текста в ячейку больше её размеров ячейка не расширяется


Steps to Reproduce:
EN: 1. Open the document
2. Enter any text larger than the cell size
3. Finish editing the cell
4. The cell should expand to fit the text.
RU:1. Открыть документ
2. Ввести любой текст больше размера ячейки
3. Завершить редактирование ячейки
4. Ячейка должна расшириться по размеру текста.

Actual Results:
EN: The cell does not expand automatically
RU: Ячейка не расширяется автоматически


Expected Results:
EN: The cell expands automatically, observing the set margins, especially the changed ones.
RU: Ячейка расширяется автоматически, соблюдая установленные отступы, особенно изменённые.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
EN: Wow, that's not all.
RU: УУУ это ещё не всё.
Comment 1 Roman 2025-10-16 11:24:32 UTC
Created attachment 203364 [details]
Без_имени_1.xlsx
Comment 2 jcline 2025-11-14 03:36:47 UTC
I can confirm that there is no auto expansion of cells in versions:

Version: 25.8.2.2 (X86_64)
Build ID: d401f2107ccab8f924a8e2df40f573aab7605b6f
CPU threads: 32; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

Version: 25.8.2.2 (X86_64)
Build ID: d401f2107ccab8f924a8e2df40f573aab7605b6f
CPU threads: 32; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

but I'm not sure this is a bug as there are features like Format->Rows->Optimal Height
Comment 3 Roman 2025-11-14 06:36:56 UTC
Created attachment 203964 [details]
Screenshot.png
Comment 4 Roman 2025-11-14 06:39:16 UTC
(In reply to jcline from comment #2)
> I can confirm that there is no auto expansion of cells in versions:

> but I'm not sure this is a bug as there are features like
> Format->Rows->Optimal Height

I probably forgot to mention that the automatic alignment of the cell text uses the "wrap by words" function.
I'm attaching a screenshot.
Although I indicated it in the title.
Я видимо забыл упомянуть: что автоматическое выравнивание текста ячейки используется функция "переносить по словам".
Прикрепляю screenshot.
Хотя в заголовке это указал.
Comment 5 Buovjaga 2025-11-19 07:48:35 UTC
(In reply to Roman from comment #1)
> Created attachment 203364 [details]
> Без_имени_1.xlsx

I edited cell B6 and inputted more text. The cell height grew. Please explain how we should test.

Arch Linux 64-bit
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6e0d9ef6fd8ce744d5a296798e2a4a56ac12b313
CPU threads: 8; OS: Linux 6.17; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 13 November 2025
Comment 6 Roman 2025-11-19 11:19:17 UTC
Created attachment 204084 [details]
2.mp4
Comment 7 Roman 2025-11-19 11:21:29 UTC
(In reply to Buovjaga from comment #5)
> (In reply to Roman from comment #1)
> > Created attachment 203364 [details]
> > Без_имени_1.xlsx
> 
> I edited cell B6 and inputted more text. The cell height grew. Please
> explain how we should test.


Я Обновил до: 
Version: 25.8.3.2 (X86_64)
Build ID: 8ca8d55c161d602844f5428fa4b58097424e324e
CPU threads: 16; OS: Linux 6.1; UI render: default; VCL: kf5 (cairo+xcb)
Locale: ru-RU (ru_RU.UTF-8); UI: ru-RU
Calc: threaded

Прикрепил видео 2.mp4
Comment 8 Buovjaga 2025-11-19 12:35:05 UTC
This needs to always be tested in new files!

Steps:
1. Create a new Calc spreadsheet, save as .xlsx and reload
2. Type something so long that it could wrap in a cell
3. Focus into the cell you typed in and activate wrapping either from toolbar or Format - Cells...

Observe how the cell height does not grow and the cell has hidden overflow instead.

Bibisected with linux-64-25.2 to 507c6fc66cda7c1022008b3d1d4c087540cb2d18
tdf#124741 export xlsx: no defaultRowHeight without customHeight
Comment 9 Commit Notification 2025-11-20 00:06:10 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/eebbde753b9d0181980cf9567a8051005f4fd9e2

tdf#168892 export xlsx: only customHeight when custom height

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Buovjaga 2025-11-20 08:52:52 UTC
Works fine now, thanks.

Arch Linux 64-bit
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c2a0e06b637f798b508de408f820f496a5419d9f
CPU threads: 8; OS: Linux 6.17; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 20 November 2025
Comment 11 Commit Notification 2025-11-20 08:54:07 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/fa1dbf94aa5bf4188137a00804241b8a22438237

tdf#168892 export xlsx: only customHeight when custom height

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 BogdanB 2025-11-28 18:14:40 UTC
Verified based on comment 10.