tdf#168892 export xlsx: only customHeight when custom height

If the default row height is specified as a customHeight,
then (by default) none of the rows will resize any more
when a cell is marked as wrap-text.

Not good.

This fixes my 25.2 regression
commit 507c6fc66cda7c1022008b3d1d4c087540cb2d18
    tdf#124741 export xlsx: no defaultRowHeight without customHeight

Perhaps if the word "unsynced" had some related meaning
I might not have made this rather large mistake.

make CppunitTest_sc_subsequent_export_test2 \
    CPPUNIT_TEST_NAME=testTdf121260

Change-Id: I0982aab90ca2f49143ec12d9e72a2b5260d8f382
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194225
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
(cherry picked from commit eebbde753b9d0181980cf9567a8051005f4fd9e2)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194227
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
(cherry picked from commit c3f6254365a268cd93f8adb8dad96597498556d3)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195270
Tested-by: Miklos Vajna <vmiklos@collabora.com>
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>