sc/source/filter/excel/xetable.cxx
@@ -2831,7 +2831,7 @@ void XclExpCellTable::SaveXml( XclExpXmlStream& rStrm )
         // OOXTODO: XML_thickTop
         // OOXTODO: XML_thickBottom
         XML_defaultRowHeight, OString::number(static_cast<double> (rDefData.mnHeight) / 20.0),
-        XML_customHeight, ToPsz(true),
+        XML_customHeight, ToPsz(rDefData.IsUnsynced()),
         XML_zeroHeight, ToPsz( rDefData.IsHidden() ),
         XML_outlineLevelRow, OString::number(maRowBfr.GetHighestOutlineLevel()),
         XML_outlineLevelCol, OString::number(maColInfoBfr.GetHighestOutlineLevel()) );
